Correção da documentação
Pequena correção na documentação da API

--- a/Documentação API Escola ALF.html
+++ b/Documentação API Escola ALF.html
@@ -343,9 +343,9 @@
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
     <pre class="example"><code>[ {
-  "name" : "Jorge Silva"
+  "nome" : "Jorge Silva"
 }, {
-  "name" : "Jorge Silva"
+  "nome" : "Jorge Silva"
 } ]</code></pre>
 
     <h3 class="field-label">Produces</h3>
@@ -388,9 +388,9 @@
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
     <pre class="example"><code>[ {
-  "name" : "Jorge Silva"
+  "nome" : "Jorge Silva"
 }, {
-  "name" : "Jorge Silva"
+  "nome" : "Jorge Silva"
 } ]</code></pre>
 
     <h3 class="field-label">Produces</h3>
@@ -523,7 +523,7 @@
     <h3><a name="Alunos"><code>Alunos</code></a> <a class="up" href="#__Models">Up</a></h3>
     
     <div class="field-items">
-      <div class="param">name (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  </div>
+      <div class="param">nome </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  </div>
           <div class="param-desc"><span class="param-type">example: Jorge Silva</span></div>
     </div>  <!-- field-items -->
   </div>
@@ -531,7 +531,7 @@
     <h3><a name="Aprovados"><code>Aprovados</code></a> <a class="up" href="#__Models">Up</a></h3>
     
     <div class="field-items">
-      <div class="param">name (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  </div>
+      <div class="param">nome </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  </div>
           <div class="param-desc"><span class="param-type">example: Jorge Silva</span></div>
     </div>  <!-- field-items -->
   </div>
